[package]
name = "tket-qir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# llvm-sys = "110"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", default-features = false, features = [
    "llvm11-0",
    "target-x86",
] }
serde_json = "1.0"