[package]
name = "tket-qir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde"] }
qirlib = {path = "../../ext/pyqir/qirlib", default-features = false}
pyqir-generator = {path = "../../ext/pyqir/pyqir-generator"}
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", default-features = false, features = ["llvm11-0", "target-x86"] }
